<resources>
    <string name="app_name">SdkNewUI</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="name_on_card">Name On Card</string>
    <string name="card_number_format">xxxx-xxxx-xxxx-xxxx</string>
    <string name="cvv">CVV</string>
    <string name="month_format">MM</string>
    <string name="year_format">YY</string>
    <string name="expires">Expires:</string>
    <string name="pay_now">PAY NOW</string>
    <string name="enter_card_details">Enter Card Details</string>
    <string name="save_card">Save card for faster checkouts.</string>

    <string name="choose_bank">Choose Your Bank</string>
    <string name="select_bank">Select Other Banks</string>
    <string name="bank_prompt">Select your Bank</string>
    <string name="redirection_text">You will be redirected to your banks website to  complete payment</string>
    <string name="axis_bank">AXIS</string>
    <string name="hdfc">HDFC</string>
    <string name="citi">CITI</string>
    <string name="sbi">SBI</string>
    <string name="icici">ICICI</string>

    <string-array name="bank_names">
        <item>State Bank Of India</item>
        <item>HDFC</item>
        <item>CITI</item>
        <item>ICICI</item>
        <item>Kotak Mahindra</item>
        <item>Canara Bank</item>
        <item>Axis Bank</item>
        <item>State Bank of Hyderabad</item>
        <item>State Bank Of Mysore</item>
        <item>Central Bank of India</item>
        <item>Yes Bank</item>
        <item>Bank Of India</item>
    </string-array>


    <string name="text_enter_cvv">Please enter your CVV</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cardType_prompt">Select Card Type</string>
    <string-array name="card_types">
        <item>VISA</item>
        <item>MASTER</item>
        <item>MASTERO</item>

    </string-array>
    <string name="title_activity_temp">TempActivity</string>
</resources>
